Corrects alignment in furigana button.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -298,6 +298,7 @@ mark:has(ruby) {
 }
 
 .furigana-button {
+  padding: 0;
   width: 1.5rem;
   height: 1.5rem;
 }
